# FFmpegPlayVideo

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mrkzs/android/ffmpegplayvideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  video.cpp
app/src/main/java/com/mrkzs/android/ffmpegplayvideo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/mrkzs/android/ffmpegplayvideo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
